infra/visibility/weave-scope/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: weave
  annotations:
    cloud.weave.works/version: v1.0.0-282-g0d7359d
