infra/visibility/weave-scope/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: weave-scope-web-ui
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.frontend.rule.type: PathPrefixStrip
    #traefik.ingress.kubernetes.io/redirect-entry-point: https
    #traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  rules:
    - host: weave-scope.kubernetes.local
      http:
        paths:
          - path: /
            backend:
              serviceName: weave-scope-app
              servicePort: 80
